==== LimeChat 0.16.4 ====

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Tweaked the preferences dialog and the server properties dialog.

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Changed the directory name, from "Theme" to "Themes".
	Added migration code in prelude.

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Added a menu item, "Mark All as Read".

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	New style action messages.
	Fixed wrong css selectors in all themes.
	Changed the default nick format to '%n: '.

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Changed to remember the current text if modified when pushed up key.

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Updated the bundled themes to conform to the new css style.
	Added all attributes in <body> to <html>.

2008-02-26  Satoshi Nakagawa <artension@gmail.com>

	Added "channelname" and "type" attribute for more control with css.
	Updated "Alternate Lines" theme to conform to the new css style.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Changed shortcut key for "Mark Scrollback" to cmd+L, and "Clear Mark" to cmd+shift+L as well.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Added "Copy Console Log as HTML" menu item.
	Reformed main menu.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Changed to use the current username only when the username consists of alphabets and numbers in the rough.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Use the current username for nick on the welcome dialog.
	Removed SACrashReporter.submit in AppController#awakeFromNib.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Removed '*' in the head of system messages.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Added a title tag to the template for log views.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Added DOCTYPE and some meta tags to the template for log views.

2008-02-24  Satoshi Nakagawa <artension@gmail.com>
